[gd_scene load_steps=2 format=3 uid="uid://cyqxw7k8bvqxu"]

[ext_resource type="Script" path="res://Scripts/UI/ActiveAbilityBook.gd" id="1_active_book"]

[node name="ActiveAbilityBook" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_active_book")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 0.95)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Header" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 0.9, 0.6, 1)
theme_override_font_sizes/font_size = 48
text = "üìñ –ö–Ω–∏–≥–∞ –ê–∫—Ç–∏–≤–Ω—ã—Ö –°–ø–æ—Å–æ–±–Ω–æ—Å—Ç–µ–π"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="MarginContainer/VBoxContainer/Header"]
custom_minimum_size = Vector2(120, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "‚úï –ó–∞–∫—Ä—ã—Ç—å"

[node name="FilterContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="FilterLabel" type="Label" parent="MarginContainer/VBoxContainer/FilterContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "–§–∏–ª—å—Ç—Ä:"

[node name="AllButton" type="Button" parent="MarginContainer/VBoxContainer/FilterContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
toggle_mode = true
button_pressed = true
text = "–í—Å–µ"

[node name="CommonButton" type="Button" parent="MarginContainer/VBoxContainer/FilterContainer"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 20
toggle_mode = true
text = "–û–±—ã—á–Ω—ã–µ"

[node name="UncommonButton" type="Button" parent="MarginContainer/VBoxContainer/FilterContainer"]
custom_minimum_size = Vector2(140, 50)
layout_mode = 2
theme_override_colors/font_color = Color(0.3, 1, 0.3, 1)
theme_override_font_sizes/font_size = 20
toggle_mode = true
text = "–ù–µ–æ–±—ã—á–Ω—ã–µ"

[node name="RareButton" type="Button" parent="MarginContainer/VBoxContainer/FilterContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
theme_override_colors/font_color = Color(0.3, 0.5, 1, 1)
theme_override_font_sizes/font_size = 20
toggle_mode = true
text = "–†–µ–¥–∫–∏–µ"

[node name="EpicButton" type="Button" parent="MarginContainer/VBoxContainer/FilterContainer"]
custom_minimum_size = Vector2(140, 50)
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.3, 1, 1)
theme_override_font_sizes/font_size = 20
toggle_mode = true
text = "–≠–ø–∏—á–µ—Å–∫–∏–µ"

[node name="LegendaryButton" type="Button" parent="MarginContainer/VBoxContainer/FilterContainer"]
custom_minimum_size = Vector2(160, 50)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.6, 0.1, 1)
theme_override_font_sizes/font_size = 20
toggle_mode = true
text = "–õ–µ–≥–µ–Ω–¥–∞—Ä–Ω—ã–µ"

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="AbilityList" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[connection signal="pressed" from="MarginContainer/VBoxContainer/Header/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/FilterContainer/AllButton" to="." method="_on_filter_button_pressed" binds= ["all"]]
[connection signal="pressed" from="MarginContainer/VBoxContainer/FilterContainer/CommonButton" to="." method="_on_filter_button_pressed" binds= ["common"]]
[connection signal="pressed" from="MarginContainer/VBoxContainer/FilterContainer/UncommonButton" to="." method="_on_filter_button_pressed" binds= ["uncommon"]]
[connection signal="pressed" from="MarginContainer/VBoxContainer/FilterContainer/RareButton" to="." method="_on_filter_button_pressed" binds= ["rare"]]
[connection signal="pressed" from="MarginContainer/VBoxContainer/FilterContainer/EpicButton" to="." method="_on_filter_button_pressed" binds= ["epic"]]
[connection signal="pressed" from="MarginContainer/VBoxContainer/FilterContainer/LegendaryButton" to="." method="_on_filter_button_pressed" binds= ["legendary"]]
