# res://Scripts/UI/ActiveAbilityBook.gd
extends Control

## UI –¥–ª—è –ø—Ä–æ—Å–º–æ—Ç—Ä–∞ –ø—Ä–æ–≥—Ä–µ—Å—Å–∞ –∏–∑—É—á–µ–Ω–∏—è –∞–∫—Ç–∏–≤–Ω—ã—Ö —Å–ø–æ—Å–æ–±–Ω–æ—Å—Ç–µ–π

var current_filter = "all"

# –¶–≤–µ—Ç–∞ –¥–ª—è —Ä–µ–¥–∫–æ—Å—Ç–µ–π
var rarity_colors = {
	"common": Color(0.8, 0.8, 0.8),
	"uncommon": Color(0.3, 1, 0.3),
	"rare": Color(0.3, 0.5, 1),
	"epic": Color(0.7, 0.3, 1),
	"legendary": Color(1, 0.6, 0.1)
}

# –ò–∫–æ–Ω–∫–∏ —Ç–∏–ø–æ–≤ —É—Ä–æ–Ω–∞
var damage_type_icons = {
	"physical": "‚öîÔ∏è",
	"magic": "‚ú®",
	"poison": "‚ò†Ô∏è",
	"shadow": "üåë"
}

func _ready():
	_populate_ability_list()
	
	# –ü–æ–¥–∫–ª—é—á–∞–µ–º—Å—è –∫ —Å–∏–≥–Ω–∞–ª–∞–º —Å–∏—Å—Ç–µ–º—ã –∏–∑—É—á–µ–Ω–∏—è
	if ActiveAbilityLearningSystem:
		ActiveAbilityLearningSystem.progress_updated.connect(_on_progress_updated)
		ActiveAbilityLearningSystem.ability_learned.connect(_on_ability_learned)
	
	# –ü–æ–¥–∫–ª—é—á–∞–µ–º—Å—è –∫ —Å–∏–≥–Ω–∞–ª–∞–º –º–µ–Ω–µ–¥–∂–µ—Ä–∞ —Å–ª–æ—Ç–æ–≤
	if AbilitySlotManager:
		AbilitySlotManager.slots_updated.connect(_on_slots_updated)

func _populate_ability_list():
	"""–ó–∞–ø–æ–ª–Ω—è–µ—Ç —Å–ø–∏—Å–æ–∫ —Å–ø–æ—Å–æ–±–Ω–æ—Å—Ç–µ–π"""
	var ability_list = $MarginContainer/VBoxContainer/ScrollContainer/AbilityList
	
	# –û—á–∏—â–∞–µ–º —Å–ø–∏—Å–æ–∫
	for child in ability_list.get_children():
		child.queue_free()
	
	if not ActiveAbilityLearningSystem:
		return
	
	# –ü–æ–ª—É—á–∞–µ–º –≤—Å–µ —Å–ø–æ—Å–æ–±–Ω–æ—Å—Ç–∏
	var all_abilities = ActiveAbilityLearningSystem.get_all_abilities()
	
	# –°–æ—Ä—Ç–∏—Ä—É–µ–º –ø–æ —Ä–µ–¥–∫–æ—Å—Ç–∏
	var sorted_abilities = []
	for rarity in ["common", "uncommon", "rare", "epic", "legendary"]:
		for ability_id in all_abilities:
			var progress_data = ActiveAbilityLearningSystem.get_ability_progress(ability_id)
			if progress_data["rarity"] == rarity:
				sorted_abilities.append(ability_id)
	
	# –°–æ–∑–¥–∞–µ–º –∫–∞—Ä—Ç–æ—á–∫–∏ —Å–ø–æ—Å–æ–±–Ω–æ—Å—Ç–µ–π
	for ability_id in sorted_abilities:
		var progress_data = ActiveAbilityLearningSystem.get_ability_progress(ability_id)
		
		# –ü—Ä–æ–≤–µ—Ä—è–µ–º —Ñ–∏–ª—å—Ç—Ä
		if current_filter != "all" and progress_data["rarity"] != current_filter:
			continue
		
		var ability_card = _create_ability_card(ability_id, progress_data)
		ability_list.add_child(ability_card)

func _create_ability_card(ability_id: String, progress_data: Dictionary) -> Control:
	"""–°–æ–∑–¥–∞—ë—Ç –∫–∞—Ä—Ç–æ—á–∫—É —Å–ø–æ—Å–æ–±–Ω–æ—Å—Ç–∏"""
	var card = PanelContainer.new()
	card.custom_minimum_size = Vector2(0, 120)
	
	# –°—Ç–∏–ª—å –∫–∞—Ä—Ç–æ—á–∫–∏
	var style = StyleBoxFlat.new()
	style.bg_color = Color(0.15, 0.15, 0.2, 0.8)
	style.border_color = rarity_colors.get(progress_data["rarity"], Color.WHITE)
	style.border_width_left = 4
	style.border_width_top = 4
	style.border_width_right = 4
	style.border_width_bottom = 4
	style.corner_radius_top_left = 8
	style.corner_radius_top_right = 8
	style.corner_radius_bottom_left = 8
	style.corner_radius_bottom_right = 8
	card.add_theme_stylebox_override("panel", style)
	
	# –ö–æ–Ω—Ç–µ–π–Ω–µ—Ä —Å–æ–¥–µ—Ä–∂–∏–º–æ–≥–æ
	var margin = MarginContainer.new()
	margin.add_theme_constant_override("margin_left", 15)
	margin.add_theme_constant_override("margin_top", 10)
	margin.add_theme_constant_override("margin_right", 15)
	margin.add_theme_constant_override("margin_bottom", 10)
	card.add_child(margin)
	
	var vbox = VBoxContainer.new()
	vbox.add_theme_constant_override("separation", 5)
	margin.add_child(vbox)
	
	# –ó–∞–≥–æ–ª–æ–≤–æ–∫ (–∏–º—è + —Ä–µ–¥–∫–æ—Å—Ç—å)
	var header = HBoxContainer.new()
	header.add_theme_constant_override("separation", 10)
	vbox.add_child(header)
	
	# –ò–∫–æ–Ω–∫–∞ —Ç–∏–ø–∞ —É—Ä–æ–Ω–∞
	var damage_icon = damage_type_icons.get(progress_data["damage_type"], "‚öîÔ∏è")
	var icon_label = Label.new()
	icon_label.text = damage_icon
	icon_label.add_theme_font_size_override("font_size", 32)
	header.add_child(icon_label)
	
	# –ò–º—è —Å–ø–æ—Å–æ–±–Ω–æ—Å—Ç–∏
	var name_label = Label.new()
	name_label.text = progress_data["ability_name"]
	name_label.add_theme_color_override("font_color", rarity_colors.get(progress_data["rarity"], Color.WHITE))
	name_label.add_theme_font_size_override("font_size", 28)
	name_label.size_flags_horizontal = Control.SIZE_EXPAND_FILL
	header.add_child(name_label)
	
	# –°—Ç–∞—Ç—É—Å (–∏–∑—É—á–µ–Ω–∞ / –¥–æ—Å—Ç—É–ø–Ω–∞ / –≤ –ø—Ä–æ—Ü–µ—Å—Å–µ)
	var status_label = Label.new()
	if progress_data["is_learned"]:
		status_label.text = "‚úÖ –ò–∑—É—á–µ–Ω–∞"
		status_label.add_theme_color_override("font_color", Color(0.3, 1, 0.3))
	elif progress_data["current_progress"] >= progress_data["required_progress"]:
		status_label.text = "üéì –ì–æ—Ç–æ–≤–∞ –∫ –∏–∑—É—á–µ–Ω–∏—é"
		status_label.add_theme_color_override("font_color", Color(1, 0.9, 0.3))
	else:
		status_label.text = "üìö –í –ø—Ä–æ—Ü–µ—Å—Å–µ"
		status_label.add_theme_color_override("font_color", Color(0.7, 0.7, 0.7))
	status_label.add_theme_font_size_override("font_size", 20)
	header.add_child(status_label)
	
	# –û–ø–∏—Å–∞–Ω–∏–µ
	var desc_label = Label.new()
	desc_label.text = progress_data["description"]
	desc_label.add_theme_color_override("font_color", Color(0.8, 0.8, 0.8))
	desc_label.add_theme_font_size_override("font_size", 18)
	desc_label.autowrap_mode = TextServer.AUTOWRAP_WORD_SMART
	vbox.add_child(desc_label)
	
	# –ü—Ä–æ–≥—Ä–µ—Å—Å-–±–∞—Ä
	var progress_container = HBoxContainer.new()
	progress_container.add_theme_constant_override("separation", 10)
	vbox.add_child(progress_container)
	
	var progress_bar = ProgressBar.new()
	progress_bar.custom_minimum_size = Vector2(0, 30)
	progress_bar.size_flags_horizontal = Control.SIZE_EXPAND_FILL
	progress_bar.max_value = progress_data["required_progress"]
	progress_bar.value = progress_data["current_progress"]
	progress_bar.show_percentage = false
	progress_container.add_child(progress_bar)
	
	# –ö–∞—Å—Ç–æ–º–Ω—ã–π —Å—Ç–∏–ª—å –ø—Ä–æ–≥—Ä–µ—Å—Å-–±–∞—Ä–∞
	var progress_style = StyleBoxFlat.new()
	progress_style.bg_color = rarity_colors.get(progress_data["rarity"], Color.WHITE)
	progress_bar.add_theme_stylebox_override("fill", progress_style)
	
	# –¢–µ–∫—Å—Ç –ø—Ä–æ–≥—Ä–µ—Å—Å–∞
	var progress_label = Label.new()
	progress_label.text = "%d / %d" % [progress_data["current_progress"], progress_data["required_progress"]]
	progress_label.add_theme_font_size_override("font_size", 20)
	progress_label.custom_minimum_size = Vector2(100, 0)
	progress_label.horizontal_alignment = HORIZONTAL_ALIGNMENT_CENTER
	progress_container.add_child(progress_label)
	
	# –ö–Ω–æ–ø–∫–∞ "–ò–∑—É—á–∏—Ç—å" (—Ç–æ–ª—å–∫–æ –µ—Å–ª–∏ –≥–æ—Ç–æ–≤–∞)
	if not progress_data["is_learned"] and progress_data["current_progress"] >= progress_data["required_progress"]:
		var learn_button = Button.new()
		learn_button.text = "üéì –ò–∑—É—á–∏—Ç—å"
		learn_button.custom_minimum_size = Vector2(150, 40)
		learn_button.add_theme_font_size_override("font_size", 22)
		learn_button.pressed.connect(_on_learn_button_pressed.bind(ability_id))
		progress_container.add_child(learn_button)
	
	# –£–ø—Ä–∞–≤–ª–µ–Ω–∏–µ —Å–ª–æ—Ç–∞–º–∏ (—Ç–æ–ª—å–∫–æ –¥–ª—è –∏–∑—É—á–µ–Ω–Ω—ã—Ö —Å–ø–æ—Å–æ–±–Ω–æ—Å—Ç–µ–π)
	if progress_data["is_learned"] and AbilitySlotManager:
		var slot_container = HBoxContainer.new()
		slot_container.add_theme_constant_override("separation", 5)
		vbox.add_child(slot_container)
		
		var slot_label = Label.new()
		slot_label.text = "–°–ª–æ—Ç:"
		slot_label.add_theme_font_size_override("font_size", 18)
		slot_container.add_child(slot_label)
		
		# –ü—Ä–æ–≤–µ—Ä—è–µ–º, –≤ –∫–∞–∫–æ–º —Å–ª–æ—Ç–µ —É—Å—Ç–∞–Ω–æ–≤–ª–µ–Ω–∞ —Å–ø–æ—Å–æ–±–Ω–æ—Å—Ç—å
		var current_slot = AbilitySlotManager.get_slot_index_for_ability(ability_id)
		
		# –ö–Ω–æ–ø–∫–∏ –¥–ª—è 4 —Å–ª–æ—Ç–æ–≤
		for slot_index in range(4):
			var slot_button = Button.new()
			slot_button.custom_minimum_size = Vector2(60, 40)
			slot_button.text = str(slot_index + 1)
			slot_button.add_theme_font_size_override("font_size", 20)
			
			# –ï—Å–ª–∏ —Å–ø–æ—Å–æ–±–Ω–æ—Å—Ç—å –≤ —ç—Ç–æ–º —Å–ª–æ—Ç–µ - –ø–æ–¥—Å–≤–µ—á–∏–≤–∞–µ–º
			if current_slot == slot_index:
				slot_button.add_theme_color_override("font_color", Color(0.3, 1, 0.3))
				slot_button.text = "‚úì " + str(slot_index + 1)
			else:
				# –ü—Ä–æ–≤–µ—Ä—è–µ–º, –∑–∞–Ω—è—Ç –ª–∏ —Å–ª–æ—Ç
				if not AbilitySlotManager.is_slot_empty(slot_index):
					slot_button.add_theme_color_override("font_color", Color(0.7, 0.7, 0.7))
			
			slot_button.pressed.connect(_on_slot_button_pressed.bind(ability_id, slot_index))
			slot_container.add_child(slot_button)
		
		# –ö–Ω–æ–ø–∫–∞ "–£–±—Ä–∞—Ç—å –∏–∑ —Å–ª–æ—Ç–∞"
		if current_slot != -1:
			var remove_button = Button.new()
			remove_button.text = "‚úï"
			remove_button.custom_minimum_size = Vector2(50, 40)
			remove_button.add_theme_font_size_override("font_size", 20)
			remove_button.add_theme_color_override("font_color", Color(1, 0.5, 0.5))
			remove_button.pressed.connect(_on_remove_from_slot_pressed.bind(ability_id))
			slot_container.add_child(remove_button)
	
	return card

func _on_filter_button_pressed(filter: String):
	"""–û–±—Ä–∞–±–æ—Ç—á–∏–∫ –Ω–∞–∂–∞—Ç–∏—è –Ω–∞ –∫–Ω–æ–ø–∫—É —Ñ–∏–ª—å—Ç—Ä–∞"""
	current_filter = filter
	
	# –û–±–Ω–æ–≤–ª—è–µ–º —Å–æ—Å—Ç–æ—è–Ω–∏–µ –∫–Ω–æ–ø–æ–∫
	var filter_container = $MarginContainer/VBoxContainer/FilterContainer
	for button in filter_container.get_children():
		if button is Button:
			button.button_pressed = false
	
	# –ê–∫—Ç–∏–≤–∏—Ä—É–µ–º –Ω—É–∂–Ω—É—é –∫–Ω–æ–ø–∫—É
	match filter:
		"all":
			$MarginContainer/VBoxContainer/FilterContainer/AllButton.button_pressed = true
		"common":
			$MarginContainer/VBoxContainer/FilterContainer/CommonButton.button_pressed = true
		"uncommon":
			$MarginContainer/VBoxContainer/FilterContainer/UncommonButton.button_pressed = true
		"rare":
			$MarginContainer/VBoxContainer/FilterContainer/RareButton.button_pressed = true
		"epic":
			$MarginContainer/VBoxContainer/FilterContainer/EpicButton.button_pressed = true
		"legendary":
			$MarginContainer/VBoxContainer/FilterContainer/LegendaryButton.button_pressed = true
	
	# –û–±–Ω–æ–≤–ª—è–µ–º —Å–ø–∏—Å–æ–∫
	_populate_ability_list()

func _on_learn_button_pressed(ability_id: String):
	"""–û–±—Ä–∞–±–æ—Ç—á–∏–∫ –Ω–∞–∂–∞—Ç–∏—è –∫–Ω–æ–ø–∫–∏ '–ò–∑—É—á–∏—Ç—å'"""
	if ActiveAbilityLearningSystem.learn_ability(ability_id):
		# –û–±–Ω–æ–≤–ª—è–µ–º —Å–ø–∏—Å–æ–∫
		_populate_ability_list()

func _on_close_button_pressed():
	"""–ó–∞–∫—Ä—ã—Ç—å –æ–∫–Ω–æ"""
	queue_free()

func _on_progress_updated(ability_id: String, current_progress: int, required_progress: int):
	"""–û–±—Ä–∞–±–æ—Ç—á–∏–∫ –æ–±–Ω–æ–≤–ª–µ–Ω–∏—è –ø—Ä–æ–≥—Ä–µ—Å—Å–∞"""
	# –û–±–Ω–æ–≤–ª—è–µ–º —Å–ø–∏—Å–æ–∫ –ø—Ä–∏ –æ–±–Ω–æ–≤–ª–µ–Ω–∏–∏ –ø—Ä–æ–≥—Ä–µ—Å—Å–∞
	_populate_ability_list()

func _on_ability_learned(ability_id: String, ability_name: String):
	"""–û–±—Ä–∞–±–æ—Ç—á–∏–∫ –∏–∑—É—á–µ–Ω–∏—è —Å–ø–æ—Å–æ–±–Ω–æ—Å—Ç–∏"""
	# –ü–æ–∫–∞–∑—ã–≤–∞–µ–º —É–≤–µ–¥–æ–º–ª–µ–Ω–∏–µ
	print("‚ú® –°–ø–æ—Å–æ–±–Ω–æ—Å—Ç—å '%s' –∏–∑—É—á–µ–Ω–∞!" % ability_name)
	
	# –û–±–Ω–æ–≤–ª—è–µ–º —Å–ø–∏—Å–æ–∫
	_populate_ability_list()

func _on_slot_button_pressed(ability_id: String, slot_index: int):
	"""–û–±—Ä–∞–±–æ—Ç—á–∏–∫ –Ω–∞–∂–∞—Ç–∏—è –∫–Ω–æ–ø–∫–∏ —Å–ª–æ—Ç–∞"""
	if AbilitySlotManager:
		if AbilitySlotManager.set_slot(slot_index, ability_id):
			# –û–±–Ω–æ–≤–ª—è–µ–º —Å–ø–∏—Å–æ–∫ –¥–ª—è –æ—Ç–æ–±—Ä–∞–∂–µ–Ω–∏—è –∏–∑–º–µ–Ω–µ–Ω–∏–π
			_populate_ability_list()

func _on_remove_from_slot_pressed(ability_id: String):
	"""–û–±—Ä–∞–±–æ—Ç—á–∏–∫ —É–¥–∞–ª–µ–Ω–∏—è —Å–ø–æ—Å–æ–±–Ω–æ—Å—Ç–∏ –∏–∑ —Å–ª–æ—Ç–∞"""
	if AbilitySlotManager:
		var slot_index = AbilitySlotManager.get_slot_index_for_ability(ability_id)
		if slot_index != -1:
			AbilitySlotManager.clear_slot(slot_index)
			# –û–±–Ω–æ–≤–ª—è–µ–º —Å–ø–∏—Å–æ–∫
			_populate_ability_list()

func _on_slots_updated():
	"""–û–±—Ä–∞–±–æ—Ç—á–∏–∫ –æ–±–Ω–æ–≤–ª–µ–Ω–∏—è —Å–ª–æ—Ç–æ–≤"""
	# –û–±–Ω–æ–≤–ª—è–µ–º —Å–ø–∏—Å–æ–∫ –ø—Ä–∏ –∏–∑–º–µ–Ω–µ–Ω–∏–∏ —Å–ª–æ—Ç–æ–≤
	_populate_ability_list()
